package com.actionworks.flashsale.app.util;

public interface OrderNoGenerateService {
    Long generateOrderNo(OrderNoGenerateContext orderNoGenerateContext);
}
